tests/samples/invalid/word_size_exceeded.pn
word32 Foo
{
	a: u16,
	b: u16,
	c: u16,
}
